# gb_recommends

./: .gitignore  README.md  requirements.txt
final/: candidate_model.py  datasplit.py  default.cnf  featuring.py  recommendations.csv  recsys.ipynb  x5recommender.py
final/models/: rank_model.pkl
hw1/: hw1.ipynb  hw1.py
hw2/: default_metrics.csv  hw2.ipynb  metrics.pkl  predictions.csv  top5000_metrics.csv
hw3/: hw3.ipynb  weighted_metrics.csv  weighted_metrics_default.csv
hw4/: hw4.ipynb  metrics.csv  metrics_similar_items.csv  metrics_similar_users.csv  webinar_4_new.ipynb
hw4/aggregation/: aggregation.c
hw4/hw4module/: LICENSE  readme.md  setup.cfg
hw4/hw4module/src/als_recommender_fragarie.egg-info/: PKG-INFO  SOURCES.txt
hw4/hw4module/src/recommender/: hw4rec.py
hw5/: additional.py  hw5.ipynb  hw5_eda.ipynb  hypopt.json  theory.ipynb  user_features.ipynb  user_features_corrected.csv
hw6/: candidate_model.py  datasplit.py  featuring.py  hw6.ipynb  metrics.py  preprocess.py  research_candidate_models.ipynb
