[metadata]
name = als-recommender-fragarie
version = 0.0.1
author = fragarie
author_email = fragarie@yandex.com
description = ALS-based recommender test module
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/j2cry/gb_recommends/tree/hw4
project_urls =
    Bug Tracker = https://github.com/j2cry/gb_recommends/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src